<resources>
    <string name="app_name">InsytGroove</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_password">Password</string>
    <string name="button_signup">Signup</string>
    <string name="button_signin">Signin</string>
    <string name="cloudinary_key">cloudinary://439861538468128:4IjHDhsHHiW50i_xnmUdWhY1tyw@gidkom</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="ad_title">Title</string>
    <string name="ad_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="featured_label">Featured</string>
    <string name="apartment_label">Apartment</string>
    <string name="accessories_label">Accessories</string>
    <string name="shoes_label">Shoes</string>
    <string name="tops_label">Tops</string>
    <string name="bottoms_label">Bottoms</string>
    <string name="dresses_label">Dresses</string>
    <string name="account_label">My Account</string>
    <string name="add_title">title</string>
    <string name="add_description">description</string>
    <string name="title_activity_create_ad">Create Ad</string>
    <string name="button_create_add">Create ad</string>
    <string name="drawer_create_ad">Create Ad</string>
    <string name="drawer_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_management">User Management</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_create">Create Ad</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_post_list">Posts</string>
    <string name="title_activity_comment_list">Comments List</string>
    <string name="title_activity_create_comment">Create a Comment</string>
    <string name="agree">Yes</string>
    <string name="hint_comment">comment</string>
    <string name="hint_email">Email</string>
    <string name="button_submit">Submit</string>
    <string name="hint_title">Title</string>
    <string name="select">Select</string>
</resources>
