<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_create_comment"
        tools:context="com.johnny.insytgroove.activities.CreateCommentActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginPageBackgroundColor">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="24dp"
                android:paddingTop="16dp">

            <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="16dp"
                    android:tint="?android:attr/textColorPrimary"
                    android:visibility="gone"
                    app:srcCompat="@drawable/logo" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="56dp"
                    android:text="@string/app_name"
                    android:visibility="gone"
                    android:textAppearance="@style/TextAppearance.Shrine.Title" />
            <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"
            />


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiUsername"
                    android:hint="@string/hint_email"
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                        android:maxLength="60"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                       />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiTitle"
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    app:errorEnabled="true"
            >

                <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="100"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiComment"
                    style="@style/Widget.Shrine.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_comment"
                    app:counterMaxLength="500"
                    app:errorEnabled="true"
            >

                <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLength="30"/>
            </com.google.android.material.textfield.TextInputLayout>


            <!--<Button-->
            <!--android:text="Signin"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btnSignin"-->
            <!--android:layout_marginTop="8dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/tvForgotPwd"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginStart="8dp"/>-->
            <!--<Button-->
            <!--android:text="Signup"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btnSignup" android:layout_marginTop="8dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/btnSignin"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginStart="8dp"/>-->

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/btnSubmit"
                        android:background="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:textColor="@color/md_white_1000"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/button_submit" />



            </RelativeLayout>




        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
